<resources>
    <string name="app_name">ToLetGo</string>

    <!--Log in and Registration -->
    <string name="create_account">Create an Account</string>
    <string name="mobile_no">Mobile No</string>
    <string name="go">Go</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create_account_button">Create Account</string>
    <string name="enter_otp">OTP Code</string>
    <string name="verify">Verify</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reference_code">Reference Code</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="forget_password">Forget Password</string>
    <string name="lombo">|</string>
    <string name="registraion_now">Registraion Now</string>
    <string name="have_account">Have a Account?</string>
    <string name="login_now">Login Now</string>
    <string name="verified">Verified</string>
    <string name="please_enter_otp_code">Please Confirm OTP Code</string>
    <string name="otp_code">OTP CODE</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="dont_receive_code">CODE NOT RECEIVED?</string>
    <string name="nid_number">NID Number</string>
    <string name="district_name">District Name</string>

    <!--Splash Screen -->
    <string name="go_next">GO NEXT</string>

    <!--MainActivity -->
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="more">More</string>

    <!--Menu Layout -->
    <string name="my_ads_live">My Ads Live</string>
    <string name="my_ads_sold">My Ads Sold</string>
    <string name="post_add">Post Add</string>
    <string name="wallet">Wallet</string>

    <!-- MainActivity NavigationDrawer -->
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Home Fragment -->
    <string name="give_rent">I will give rent</string>
    <string name="take_rent">I will take rent</string>
    <string name="earning_site">Earning Site</string>
    <string name="inverstor">Investor</string>
    <string name="comming_soon">Coming Soon</string>

    <!--Division Fragment -->
    <string name="select_location">Select Location</string>
    <string name="dhaka">DHAKA</string>
    <string name="chottogram">CHOTTOGRAM</string>
    <string name="khulna">KHULNA</string>
    <string name="rajshahi">RAJSHAHI</string>
    <string name="sylhet">SYLHET</string>
    <string name="barishal">BARISHAL</string>
    <string name="rangpur">RANGPUR</string>


    <!--Category Fragment -->
    <string name="to_let_category">To-Let Categories</string>
    <string name="card_home">Home</string>
    <string name="card_mess">Mess</string>
    <string name="card_hotel">Hotel</string>
    <string name="card_car">Car</string>
    <string name="card_bus">Bus</string>
    <string name="card_truck">truck</string>
    <string name="card_ambulance">ambulance</string>
    <string name="card_restaurant">restaurant</string>

    <!--Profile Fragment -->
    <string name="log_out">LOG OUT</string>

    <!--Home Rent Post Ads -->
    <string name="browse_images">Choose Images</string>
    <string name="write_month">Rent From (ex. MARCH 2020)</string>
    <string name="select_division">Select Division</string>
    <string name="select_area">Select Area</string>
    <string name="select_floor">Select Floor</string>
    <string name="postal_code">Postal Code</string>

    <string name="size_details">Size/sqf</string>
    <string name="bed_room">Bed Room</string>
    <string name="bath">Bath</string>
    <string name="kitchen">Kitchen</string>
    <string name="balcony">Balcony</string>
    <string name="select_font_view">Select Font View</string>
    <string name="holding_no">Holding No</string>
    <string name="rent_price">Rent Price(BDT)</string>
    <string name="post_description">Post Description</string>

    <string name="home_owner_form">Home Owner Form</string>
    <string name="ads_form_1">Ads For Rent 1/3</string>
    <string name="ads_form_2">Ads For Rent 2/3</string>
    <string name="ads_form_3">Others Opportunities 3/3</string>
    <string name="go_back">Go Back</string>
    <string name="hint_area_name">Describe Area Address</string>

    <string name="wifi">WIFI</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="lift">Lift</string>
    <string name="security">Security</string>
    <string name="generator">Generator</string>
    <string name="cleaning_service">Cleaning Service</string>
    <string name="post_your_ads">POST YOUR ADS</string>
    <string name="profession">Profession</string>
    <string name="address">Address</string>

    <!--Owner Details Form-->
    <string name="home_name">Home Name</string>
    <string name="owner_name">Owner Name</string>
    <string name="road_name">Road Name</string>
    <string name="owner_profession">Owner Profession</string>
    <string name="home_address">Home Address</string>
    <string name="home_area">Home Area</string>
    <string name="owner_details">Owner Details</string>
    <string name="call_owner">Call Home Owner</string>

    <!--Home Rent Sample -->
    <string name="rent_home">Rent Home: 2 Bed, 1 Kitchen, 2 Balcony</string>
    <string name="location">Mohammadpur, Barishal</string>
    <string name="floor">3rd Floor</string>
    <string name="side_view">Side View: North Side</string>
    <string name="rent_view">15000 tk/month</string>
    <string name="oppurtunities">Opputunities</string>
    <string name="cal_now">Call Now</string>
    <string name="det_ails">Details</string>

    <!--Reffer and Earn -->
    <string name="reffer_text">Reffer and Earn</string>
    <string name="room_ad">রুমের এড দিয়ে (ইনকাম)</string>
    <string name="reffer_earn">রেফার করে (ইনকাম)</string>
    <string name="video_ad">ভিডিও দেখে (ইনকাম)</string>
    <string name="pay_ment">পেমেন্ট নিন</string>
    <string name="off_er">অফার</string>
    <string name="inves_tors">Investors</string>
    <string name="cate_gories">All Categories</string>
    <string name="connection">আপনি যদি এই এপসে\nশেয়ার হতে চান তাহলে\n\nযোগাযোগ করুনঃ 01766644467</string>
    <string name="youtube_rules">***প্রতিদিন মোট ৬টি ভিডিও দেখুন, প্রতিটি ভিডিও কমপক্ষে ১ মিনিট করে দেখতে হবে।\n\n***সব গুলো ভিডিও দেখা শেষ হলে আপনি পাবেন ২ টাকা।\n\n
        ***আমাদের Youtube চ্যানেলটি সাবস্ক্রাইব না করলে এই এস্প থেকে কোন পেমেন্ট পাবেন না।\n\n\n
    আমাদের Youtube চ্যানেল ভিজিট করার জন্য নিচের বাটনে ক্লিক করুন।</string>
    <string name="payment_nin_dialog">ভিডিও দেখা শেষ হলে পেমেন্ট নিন।</string>

    <string name="FIREBASE_STORAGE_LOCATION">gs://toletgo-ee936.appspot.com</string>

    <!-- Home Post Fragment -->
    <string name="flat_rent">Flat Rent:</string>
    <string name="rent_from">Rent From:</string>
    <string name="call_now">Call Now</string>
    <string name="details">Details</string>


    <!--Fragment Values -->
    <string name="category_fragment">CATEGORY</string>
    <string name="default_fragment">DEFAULT</string>
    <string name="home_post_show_fragment">HOME_POST</string>
    <string name="no_network_fragment">NO_NETWORK</string>
    <string name="connected_to_network_fragment">YES_NETWORK</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <!--Admn Menu Strings -->
    <string name="new_home_ads">New Home Ads</string>
    <string name="sold_home_ads">Sold Home Ads</string>
    <string name="payment_request">Payment Request</string>
    <string name="Reports">Reports</string>
    <string name="home_live_post">Live Home Ads</string>
    <string name="youtube_videos">Youtube Videos</string>

    <!--SampleView Admin Post -->
    <string name="sold">SOLD</string>
    <string name="delete">DELETE</string>
    <string name="active">ACTIVE</string>
    <string name="live">Make Live</string>
    <string name="approve">Approve</string>
    <string name="add">ADD</string>


    <!--Bangla Strings -->
    <string name="bari_maliker_tottho_janun">বাড়ির মালিকের তথ্য জানুন</string>
    <string name="bari_maliker_tottho_janun_details">*আপনার যদি এই বাসা টা পছন্দ হয় তাহলে বাসা ভাড়ার তালিকা অনুযায়ী আমাদের নাম্বারে চার্জ ফি পেমেন্ট করুন।\n\n
        *যদি আপনার পছন্দনীয় বাসা টি ভাড়া হয়ে যায় তাহলে অবশ্যই আপনার টাকা ফেরত পাবেন।\n\n
        *অথবা আমাদের সাথে যোগাযোগ করুন। \n\n
        বাসা ভাড়া অনুযায়ী তালিকা:\n\n*১-৫০০০ হলে = ১০০/- টাকা।\n*৫০০০-১০০০০ হলে = ২০০/- টাকা।\n
        *১০০০০-১৫০০০ হলে = ৩০০/- টাকা।\n*১৫০০০-২০০০০ হলে= ৪০০/- টাকা।\n*২০০০০+ হলে = ৫০০/- টাকা।</string>

    <string name="refer_code_dialog">*প্রতিবার পেমেন্ট নিতে হলে আপনাকে কমপক্ষে ১০ জনকে রেফার করাতে, প্রাতি জনকে রেফার করালে পাবেন  ৩ টাকা।\n\n
        **এই অ্যাপসটি ইনস্টল এর পর  rate us বাটনে ক্লিক করে 5 স্টার  দিয়ে মানসম্পন্ন একটি কমেন্ট করুন এবং
        যাদের রেফার করাবেন তাদেরকেও মানসম্পন্ন একটি কমেন্ট করতে বলুন।</string>


    <!--Hint Strings -->
    <string name="hint_search_by_area_division_id">search by division</string>

    <!--Hint Strings -->
    <string name="refer_code">Refer Code: </string>
    <string name="done_watching">Done</string>


</resources>
