<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/bottom_menu_home"
        android:title="@string/home"
        android:icon="@drawable/icon_home"
        app:showAsAction="always"/>
    <item android:id="@+id/bottom_menu_profile"
        android:title="@string/profile"
        android:icon="@drawable/icon_profile"
        app:showAsAction="always"/>
    <item android:id="@+id/bottom_menu_setting"
        android:title="@string/setting"
        android:icon="@drawable/icon_setting"
        app:showAsAction="always"/>
    <item android:id="@+id/bottom_menu_more"
        android:title="@string/more"
        android:icon="@drawable/icon_more"
        app:showAsAction="always"/>


</menu>