<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Switch
            android:id="@+id/switch_cleaning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/roundshape_white_bg"
            android:padding="10dp"
            android:showText="true"
            android:text="@string/cleaning_service"
            android:textColor="#000000"
            android:textOff="NO"
            android:textOn="YES"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/switch_generator"
            app:layout_constraintStart_toStartOf="@+id/switch_generator"
            app:layout_constraintTop_toBottomOf="@+id/switch_generator" />

        <Switch
            android:id="@+id/switch_generator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/roundshape_white_bg"
            android:padding="10dp"
            android:showText="true"
            android:text="@string/generator"
            android:textColor="#000000"
            android:textOff="NO"
            android:textOn="YES"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/switch_cleaning"
            app:layout_constraintEnd_toEndOf="@+id/switch_security"
            app:layout_constraintStart_toStartOf="@+id/switch_security"
            app:layout_constraintTop_toBottomOf="@+id/switch_security" />

        <Switch
            android:id="@+id/switch_security"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/roundshape_white_bg"
            android:padding="10dp"
            android:showText="true"
            android:text="@string/security"
            android:textColor="#000000"
            android:textOff="NO"
            android:textOn="YES"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/switch_generator"
            app:layout_constraintEnd_toEndOf="@+id/switch_lift"
            app:layout_constraintStart_toStartOf="@+id/switch_lift"
            app:layout_constraintTop_toBottomOf="@+id/switch_lift" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/ads_form_3"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.768"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/switch_wifi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/roundshape_white_bg"
            android:padding="10dp"
            android:showText="true"
            android:text="@string/wifi"
            android:textColor="#000000"
            android:textOff="NO"
            android:textOn="YES"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <Switch
            android:id="@+id/switch_lift"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/roundshape_white_bg"
            android:padding="10dp"
            android:showText="true"
            android:text="@string/lift"
            android:textColor="#000000"
            android:textOff="NO"
            android:textOn="YES"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/switch_security"
            app:layout_constraintEnd_toEndOf="@+id/switch_wifi"
            app:layout_constraintStart_toStartOf="@+id/switch_wifi"
            app:layout_constraintTop_toBottomOf="@+id/switch_wifi" />

        <Button
            android:id="@+id/button_post_ads"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/roundshape_yellow_bg"
            android:text="@string/go_next"
            app:layout_constraintEnd_toEndOf="@+id/switch_cleaning"
            app:layout_constraintTop_toBottomOf="@+id/switch_cleaning" />

        <Button
            android:id="@+id/button_third_form_previous"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/roundshape_yellow_bg"
            android:text="@string/go_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/switch_cleaning"
            app:layout_constraintTop_toBottomOf="@+id/switch_cleaning" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>